// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association source map should have source map data 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 4,
    "line": 5,
    "tokenText": "allow primary key updates",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityNamespaceName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "identityProperties": Array [
    Object {
      "column": 4,
      "line": 6,
      "tokenText": "domain entity",
    },
    Object {
      "column": 4,
      "line": 9,
      "tokenText": "domain entity",
    },
  ],
  "isAbstract": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 25,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Association",
  },
}
`;

exports[`when building association source map should have two identity properties with sourceMaps: Property 0 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "definesAssociation": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 7,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 4,
    "line": 6,
    "tokenText": "domain entity",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isWeak": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "mergeDirectives": Array [],
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 40,
    "line": 6,
    "tokenText": "[2]",
  },
  "metaEdName": Object {
    "column": 18,
    "line": 6,
    "tokenText": "FirstDomainEntityName",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Association",
  },
  "parentEntityName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 18,
    "line": 6,
    "tokenText": "FirstDomainEntityName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 6,
    "tokenText": "domain entity",
  },
}
`;

exports[`when building association source map should have two identity properties with sourceMaps: Property 1 1`] = `
Object {
  "baseKeyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "definesAssociation": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "documentation": Object {
    "column": 6,
    "line": 10,
    "tokenText": "documentation",
  },
  "documentationInherited": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "fullPropertyName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "hasRestriction": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isIdentityRename": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptional": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isOptionalCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isPartOfIdentity": Object {
    "column": 4,
    "line": 9,
    "tokenText": "domain entity",
  },
  "isQueryableOnly": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequired": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isRequiredCollection": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "isWeak": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "mergeDirectives": Array [],
  "mergeTargetedBy": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "metaEdId": Object {
    "column": 41,
    "line": 9,
    "tokenText": "[3]",
  },
  "metaEdName": Object {
    "column": 18,
    "line": 9,
    "tokenText": "SecondDomainEntityName",
  },
  "namespace": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "parentEntity": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Association",
  },
  "parentEntityName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "referencedEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "referencedNamespaceName": Object {
    "column": 18,
    "line": 9,
    "tokenText": "SecondDomainEntityName",
  },
  "referencedType": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "roleName": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "shortenTo": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "type": Object {
    "column": 4,
    "line": 9,
    "tokenText": "domain entity",
  },
}
`;

exports[`when building association with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'merge', 'role name'}, column: 0, line: 11, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'merge', 'role name'}, column: 0, line: 11, token: TrailingText",
]
`;

exports[`when building association with lowercase association name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
]
`;

exports[`when building association with no association name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Association[1]', column: 15, line: 2, token: [1]",
  "no viable alternative at input 'Association[1]', column: 15, line: 2, token: [1]",
]
`;

exports[`when building association with no documentation in the first domain entity should have mismatched input error 1`] = `
Array [
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 6, token: domain entity",
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 6, token: domain entity",
]
`;

exports[`when building association with no documentation in the second domain entity should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting 'documentation', column: 0, line: 9, token: End Namespace",
  "mismatched input 'End Namespace' expecting 'documentation', column: 0, line: 9, token: End Namespace",
]
`;

exports[`when building association with no documentation should have no viable alternative error 1`] = `
Array [
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 3, token: domain entity",
  "mismatched input 'domain entity' expecting 'documentation', column: 4, line: 3, token: domain entity",
]
`;

exports[`when building association with no domain entity property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'domain entity', 'merge', 'role name'}, column: 0, line: 8, token: End Namespace",
  "mismatched input 'End Namespace' expecting {'domain entity', 'merge', 'role name'}, column: 0, line: 8, token: End Namespace",
]
`;

exports[`when building duplicate associations should have validation failures for each entity: when building duplicate associations should have validation failures for each entity -> Association 1 message 1`] = `"Association named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate associations should have validation failures for each entity: when building duplicate associations should have validation failures for each entity -> Association 1 sourceMap 1`] = `
Object {
  "column": 14,
  "line": 11,
  "tokenText": "EntityName",
}
`;

exports[`when building duplicate associations should have validation failures for each entity: when building duplicate associations should have validation failures for each entity -> Association 2 message 1`] = `"Association named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate associations should have validation failures for each entity: when building duplicate associations should have validation failures for each entity -> Association 2 sourceMap 1`] = `
Object {
  "column": 14,
  "line": 2,
  "tokenText": "EntityName",
}
`;
